[package]
name = "eywa"
version = "0.2.0"
edition = "2021"
description = "A helpers toolkit to make programs more simply"
license = "GPL-2.0-or-later"
repository = "https://github.com/taishingi/eywa"
documentation = "https://docs.rs/eywa/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored_truecolor = "0.1.0"
glob = "0.3.1"
printers = "1.2.0"
quote = "1.0.33"
syn = "2.0.39"
